--- a/login/templates/playlists.html
+++ b/login/templates/playlists.html
@@ -1,8 +1,22 @@
+<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
+<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
+
+<nav class="navbar navbar-default">
+  <div class="container-fluid">
+    <div class="navbar-header">
+
+    </div>
+  </div>
+</nav>
+
 {% block content %}
-<h1>{{ section.title }}</h1>
-	{% for playlist in playlists %}
-	    <div>
-	    	{{ playlist }}
-	    </div>
-	{% endfor %}
+	<div class="container">
+		{% for playlist in playlists %}
+		    <div class="row">
+		    	<div class="col-md-6">
+		    		{{ playlist.name }}
+		    	</div>
+		    </div>
+		{% endfor %}
+	</div>
 {% endblock %}
